<resources>
    <string name="app_name">TodoAppFirebase</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="login_button_text">Login</string>
    <string name="login_forgot_password_text">Forgot Password?</string>
    <string name="login_or_textView">or</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="add_task">Add Task</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="create_task">Create Task</string>
    <string name="dd_mm_yyyy">Due date : dd/mm/yyyy</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="create_a_new_task">Create a new Task</string>
</resources>