<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:textSize="40sp"
            android:gravity="center"
            android:text="@string/login_text"
            android:textColor="@color/black"/>

        <EditText
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:ems="10"
            android:drawablePadding="10dp"
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_email"
            android:layout_height="50dp"
            android:background="@drawable/custom_input_login"
            android:textSize="20sp"
            android:hint="@string/login_email_text"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>

        <EditText

            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:ems="10"
            android:drawablePadding="10dp"
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_password"
            android:layout_height="50dp"
            android:background="@drawable/custom_input_login"
            android:textSize="20sp"
            android:hint="@string/login_password_text"
            android:inputType="textPassword"
            android:autofillHints="password" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/login_forgot_password_text"
            android:layout_margin="15dp"
            android:id="@+id/login_forgot_password"
            android:textColor="@android:color/holo_blue_bright"
            android:background="@android:color/transparent"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_button_text"
            android:layout_margin="15dp"
            android:textSize="30sp"
            android:background="@drawable/rounded_button"
            android:id="@+id/login_login_button"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:textAllCaps="false"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textSize="15sp"
           />
        <Button
            android:textAllCaps="false"
            android:id="@+id/login_create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="15sp"
            android:textColor="@android:color/holo_blue_bright"
            android:background="@android:color/transparent"/>

    </LinearLayout>






</RelativeLayout>