<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccountActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:textSize="40sp"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/black"/>

        <EditText
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:ems="10"
            android:drawablePadding="10dp"
            android:id="@+id/create_account_username"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_user"
            android:layout_height="50dp"
            android:background="@drawable/custom_input_login"
            android:textSize="20sp"
            android:hint="@string/username"
            android:autofillHints="username"
            android:inputType="textPersonName" />

        <EditText
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:ems="10"
            android:drawablePadding="10dp"
            android:id="@+id/create_account_email"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_email"
            android:layout_height="50dp"
            android:background="@drawable/custom_input_login"
            android:textSize="20sp"
            android:hint="@string/login_email_text"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>

        <EditText

            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:ems="10"
            android:drawablePadding="10dp"
            android:id="@+id/create_account_password"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_password"
            android:layout_height="50dp"
            android:background="@drawable/custom_input_login"
            android:textSize="20sp"
            android:hint="@string/login_password_text"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_account"
            android:background="@drawable/rounded_button"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:id="@+id/create_account_create_button"
            android:textAllCaps="false"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/create_account_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_bright"
            android:background="@android:color/transparent"
            android:textAllCaps="false"/>

    </LinearLayout>





</RelativeLayout>